Camino only - Bug 327203: When opening prefpanes, respect the OS Full keyboard access pref for determining whether or not to focus the first element.  r=hwaara sr=pink